<resources>
    <string name="menu_title">Menu</string>
    <string name="dialog_btn_1">OK</string>
    <string name="dialog_btn_2">Cancel</string>
    <string name="delete">删除</string>
    <string name="clear">清空</string>
    <string name="all_keyboard">全键盘</string>
    <string name="t9_keyboard">T9键盘</string>
    <string name="input_no_words_delete">无内容可删除</string>
    <string name="input_no_words_clear">无内容可清空</string>
    <string name="app_name">TVService</string>
    <string name="nosignal_needsearch">no channel, search channel now?</string>
    <string name="dialog_btn_search">search</string>
    <string name="dialog_btn_searchlater">search later</string>
    <string name="seconds_will_poweroff">s later turn off</string>
    <string name="pressOkRestore">press Ok Restore</string>
    <string name="placetop">SetTop</string>
    <string name="isthefirstchannel">is the first channel</string>
    <string name="isthelastchannel">is the last channel</string>
    <string name="restored">has been restored</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="deleteinfo">No channel has been deleted</string>
    <string name="nodeleteinfo">The last channel can not be deleted</string>
    <string name="nochannelinfo">No channel information</string>
    <string name="noinfotip">Above settings can not be empty</string>
    <string name="errorinfotip">End frequency should move than 52</string>
    <string name="search_channel">Search Channel</string>
    <string name="nit_search">Nit Search</string>
    <string name="str_tv_program">TV</string>
    <string name="str_cur_frequency">Current Freq:</string>
    <string name="str_radio_program">Radio</string>
    <string name="str_rate">Code Rate:</string>
    <string name="str_other_program">Other</string>
    <string name="str_mode">Module Mode:</string>
    <string name="search_progress">Search Progress</string>
    <string name="signal_quality">Signal Quality</string>
    <string name="signal_strength">Signal Strength</string>
    <string name="mannual_search">Manual Search</string>
    <string name="str_begin_frequency">Start Frequency</string>
    <string name="str_end_frequency">End Frequency</string>
    <string name="str_mode_name">Module Mode</string>
    <string name="str_start_search">Start Search</string>
    <string name="str_rate_name">Code Rate</string>
    <string name="str_band_name">Band Width</string>
    <string name="start_frequency">Start Frequency</string>
    <string name="end_frequency">End Frequency</string>
    <string name="crt_frequency">Current Frequency</string>
    <string name="symbol_rate">Code Rate</string>
    <string name="not_empty">Can not be empty</string>
    <string name="str_frequencypoint_setting">Freq Point Setting</string>
    <string name="str_video_vod">Video Vod</string>
    <string name="frequencypoint_setting">Freq.set</string>
    <string name="str_main_frequencypoint">Main Freq Point</string>
    <string name="str_loader_frequencypoint">Loader Freq</string>
    <string name="str_auto_search">Auto Search</string>
    <string name="str_manual_search">Manual Search</string>
    <string name="str_band">Band Width:</string>
    <string name="crt_channel_num">Channel Count:</string>
    <string name="str_current_frequency">Current Freq:</string>
    <string name="cur_channel_index">Current Channel:</string>
    <string name="frequency_adjust">Frequency Adjust</string>
    <string name="auto_search">Auto Search</string>
    <string name="frequency_segment">Freq Segment:</string>
    <string name="channel_info">Channel Info</string>
    <string name="app_epg_name">EPG</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Sytem_STARTUP_ING">Launching system</string>
    <string name="DTV_STARTUP_ING">Starting up DTV</string>
    <string name="SOURCE_ATV">ATV</string>
    <string name="SOURCE_DVBC">DVBC</string>
    <string name="SOURCE_DTMB">DTMB</string>
    <string name="SOURCE_AV">AV</string>
    <string name="SOURCE_HDMI">HDMI</string>
    <string name="SOURCE_VGA">VGA</string>
    <string name="SOURCE_YUV">YUV</string>
    <string name="SOURCE_IPLIVE">IPLIVE</string>
    <string name="SOURCE_REMEMBER">Remember</string>
    <string name="SOURCE_VOD">ReView</string>
    <string name="SOURCE_DEFAULT">Source</string>
    <string name="DTV_DVBC_RADIO_INFO">Radio Program</string>
    <string name="category_all">All</string>
    <string name="category_cctv">CCTVs</string>
    <string name="category_hd">HD</string>
    <string name="category_startv">Local</string>
    <string name="category_other">Other</string>
    <string name="category_collect">Collect</string>
    <string name="atvchannel">Analog TV</string>
    <string name="currentchannel">Playing</string>
    <string name="DVN_CA_STRING_PAIR_TITLE">DVN Password Check</string>
    <string name="DVN_CA_STRING_PAIR_ID">ID:</string>
    <string name="DVN_CA_STRING_PAIR_PWD">Password:</string>
    <string name="DVN_CA_STRING_PAIR_BUTTON_ENTER">Enter</string>
    <string name="DVN_CA_STRING_PWD_NOTIFY_LEN">Password length of 8 bits</string>
    <string name="dvnca_card_Change_Token_info">For the current card:</string>
    <string name="dvnca_card_detuct_token_info">Deducted from the card balance:</string>
    <string name="dvnca_urgency_broadcast">Urgency broadcasting</string>
    <string name="ca_urgency_broadcast">Channel in the lock</string>
    <string name="DTV_CASETTING_FORCE_REBOOT">reboot system...</string>
    <string name="dvnca_do_card_pair">是否进行机卡配对</string>
    <string name="dvnca_tips_insert_right_card">请插入有效智能卡！</string>
    <string name="dvnca_confirm_pair">配对</string>
    <string name="dvnca_confirm_back">返回</string>
    <string name="dvnca_card_pair_pairing_start">开始机卡配对...</string>
    <string name="dvnca_card_pair_system_pairing">机卡配对中...</string>
    <string name="dvnca_manu_pair_fail">配对失败.</string>
    <string name="dvnca_card_pair_complete">配对完成!</string>
    <string name="dvnca_get_emm_timemout">获取EMM数据超时</string>
    <string name="dvnca_not_receive_cat">CAT没有收到</string>
    <string name="goods_show_onlinebuy">在线购买</string>
    <string name="goods_buy_onlinebuy">您正在购买：</string>
    <string name="goods_buying">请稍等...</string>
    <string name="goods_buy_makesure">确认支付</string>
    <string name="goods_buy_cancel">取消</string>
    <string name="goods_buy_success">购买成功！</string>
    <string name="goods_price">￥%1$s元</string>
    <string name="tv_menu_info">信息</string>
    <string name="tv_menu_interaction">互动</string>
    <string name="tv_menu_personal">个人</string>
    <string name="tv_score_tip">总积分:</string>
    <string name="tv_answer_tip">总答题:</string>
    <string name="tv_weekly_rank_tip">状元周榜:</string>
    <string name="tv_whole_rank_tip">状元总榜:</string>
    <string name="btn_rank">排行榜</string>
    <string name="btn_help">帮助说明</string>
    <string name="tv_score">%s分</string>
    <string name="kuyun_privacy_agreement">"酷云TV向您提供参与性更强、更有趣的看电视的新方式。您可在收看直播电视的过程中，全程在线实时参与和节目内容相关的问答、竞猜、投票、购物、关联资讯等互动娱乐活动，提升您收看节目的现场感、参与性和趣味性。

"</string>
    <string name="operating_instructions">"上下左右键：
上线移动选中框位置

OK键：
选中位置后，按下ok键，确认选中状态，进入下一级
屏幕左侧下方出现信息或互动提示时，按下遥控器Ok键打开进入相应信息与互动。

返回键：
按下遥控器返回键，可以返回上一级操作。
"</string>
    <string name="tv_title_avatar_edit">编辑头像</string>
    <string name="tv_title_nickname_edit">编辑昵称</string>
    <string name="tv_title_phone_edit">编辑手机号码</string>
    <string name="tv_title_email_edit">编辑邮箱地址</string>
    <string name="tv_title_rank">排行大厅</string>
    <string name="tv_title_score_mall">积分商城</string>
    <string name="tv_title_myfavorite">我的收藏</string>
    <string name="tv_title_weekly_rank">周排行榜</string>
    <string name="tv_title_whole_rank">总排行榜</string>
    <string name="tv_answer">%s题</string>
    <string name="tv_rank_order">第%s名</string>
    <string name="tv_mini_interaction">互动迷你模式</string>
    <string name="no_data">暂无数据</string>
    <string name="tv_title_help">帮助说明</string>
    <string name="tv_title_about">关于应用</string>
    <string name="ok_tip">确认键: 进入当前选择焦点</string>
    <string name="left_tip">左    键: 向左切换顶部导航</string>
    <string name="right_tip">右    键: 向右切换顶部导航</string>
    <string name="up_tip">上    键: 向上移动选择焦点</string>
    <string name="down_tip">下    键: 向下移动选择焦点</string>
    <string name="back_tip">返回键: 返回上一级</string>
    <string name="tv_title_operation">操作说明</string>
    <string name="show_back_info">遥控器返回键返回上一级</string>
    <string name="add_favorite">收藏</string>
    <string name="cancel_favorite">取消收藏</string>
    <string name="fail_to_operation">操作失败 T_T</string>
    <string name="save">Save</string>
    <string name="send_to_phone">发送到手机</string>
    <string name="send_to_mail">发送到邮箱</string>
    <string name="input_phone">输入手机号码</string>
    <string name="input_mail">输入电子邮箱</string>
    <string name="format_not_correct">格式不正确</string>
    <string name="have_been_saved">已保存过</string>
    <string name="success_to_save">保存成功</string>
    <string name="information_introduction_more">查看详情</string>
    <string name="introduction_title">节目详情</string>
    <string name="send_info_add_phone">添加手机号码</string>
    <string name="send_info_add_email">添加邮箱</string>
    <string name="send_info_clear_list">清除列表</string>
    <string name="have_been_sent">已发送</string>
    <string name="interaction_preview_title">互动预告</string>
    <string name="interaction_preview_today">今天</string>
    <string name="tv_scoremall_tips">积分商城会在近日开放，届时可以用玩互动赢得的积分购买物品，我们会以邮寄的方式将您购买的物品寄送到您手中，各位小伙伴努力积攒积分哦！</string>
    <string name="action_result_tips1">竞猜成功获得</string>
    <string name="action_result_tips2">您选择的答案是:</string>
    <string name="action_result_tips3">获得</string>
    <string name="action_result_right">回答正确</string>
    <string name="action_result_wrong">回答错误</string>
    <string name="action_score">积分</string>
    <string name="action_score_total">总积分</string>
    <string name="interaction_answer_tips">正确答案</string>
    <string name="show_no_tv">此节目没有相关信息！</string>
    <string name="upnp_device_name">酷云TV</string>
    <string name="vote_success">选择成功，您的选择是：</string>
    <string name="ceshi1">测试1</string>
    <string name="ceshi2">测试2</string>
    <string name="ceshi3">测试3</string>
    <string name="ceshi4">测试4</string>
    <string name="vod_no_net">Has no network!</string>
    <string name="TV_STRING_ATV_CHANNEL">ATV</string>
    <string name="TV_STRING_SETTING">Setting</string>
    <string name="TV_STRING_VOLUME_COMPENSATION">Vol Compen.</string>
    <string name="TV_STRING_CHANNEL_INFO">Channel Info</string>
    <string name="TV_STRING_CACARD_INFO">Cacard Info</string>
    <string name="TV_STRING_DTV_INFO">DTV Info</string>
    <string name="TV_STRING_DTV_CASETTING">CA Setting</string>
    <string name="TV_STRING_IRDETOEMM_INFO">EMM info</string>
    <string name="TV_STRING_IRDETOECM_INFO">ECM info</string>
    <string name="TV_STRING_PAL">PAL</string>
    <string name="TV_STRING_NTSC">NTSC</string>
    <string name="TV_STRING_PAL_BGHI">PAL_BGHI</string>
    <string name="TV_STRING_NTSC_M">NTSC_M</string>
    <string name="TV_STRING_SECAM">SECAM</string>
    <string name="TV_STRING_NTSC_44">NTSC_44</string>
    <string name="TV_STRING_PAL_M">PAL_M</string>
    <string name="TV_STRING_PAL_N">PAL_N</string>
    <string name="TV_STRING_PAL_60">PAL_60</string>
    <string name="dtv_search_channel">DTV Channel</string>
    <string name="str_cha_dtv_frqwidth">8M</string>
    <string name="tv_string_dtv_channel_id">Channel Id</string>
    <string name="tv_string_dtv_channel_name">Channel Name</string>
    <string name="tv_string_dtv_sigfrequency">Signal frequency</string>
    <string name="tv_string_dtv_soundformat">Sound format</string>
    <string name="tv_string_dtv_imagformat">Image format</string>
    <string name="tv_string_dtv_sigintensity">Signal intensity</string>
    <string name="tv_string_dtv_sigquality">Signal quality</string>
</resources>